force-app/main/default/objects/custom_create208__c/custom_create208__c.object-meta.xml
<CustomObject>
    <label>Custom created object208</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects208</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>