force-app/main/default/objects/custom_create208__c/fields/custom_create_208field536__c.field-meta.xml
<CustomField>
    <fullName>custom_create_208field536__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 208field536</label>
    <type>Checkbox</type>
</CustomField>